WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112966
[BlackBerry] Last paragraph can't be selected by touch hold selection if there is no new line after it in subframe
https://bugs.webkit.org/show_bug.cgi?id=112966
Summary
[BlackBerry] Last paragraph can't be selected by touch hold selection if ther...
Iris Wu
Reported
2013-03-21 14:35:20 PDT
If selection reaches the bottom of content, just ignore scroll margin so the text on the bottom can be selected.
Attachments
Patch
(3.46 KB, patch)
2013-03-21 14:41 PDT
,
Iris Wu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Iris Wu
Comment 1
2013-03-21 14:41:50 PDT
Created
attachment 194344
[details]
Patch
Rob Buis
Comment 2
2013-03-21 14:52:37 PDT
Comment on
attachment 194344
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-03-21 15:14:04 PDT
Comment on
attachment 194344
[details]
Patch Clearing flags on attachment: 194344 Committed
r146528
: <
http://trac.webkit.org/changeset/146528
>
WebKit Review Bot
Comment 4
2013-03-21 15:14:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug