[BlackBerry] Last paragraph can't be selected by touch hold selection if there is no new line after it in subframe. https://bugs.webkit.org/show_bug.cgi?id=112966

Patch by Iris Wu <shuwu@blackberry.com> on 2013-03-21
Reviewed by Rob Buis.

PR 312044
Reviewed Internally By Genevieve Mak.

If selection reaches the bottom of content, ignore scroll margin
so the text on the bottom can be selected.
Stop expanding selection only if the end of document is selected
or touch is released.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::expandSelection):
(BlackBerry::WebKit::SelectionHandler::ensureSelectedTextVisible):

Canonical link: https://commits.webkit.org/131309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146528 268f45cc-cd09-0410-ab3c-d52691b4dbfc